--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
 
 	//mail
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
+
+	//test
+	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
+	testImplementation "org.testcontainers:testcontainers:1.17.6"
+	testImplementation "org.testcontainers:junit-jupiter:1.17.6"
 }
 
 tasks.named('test') {
